frontend/src/styles/components/dialog.css
@layer components {
    .dialog__backdrop {
        @apply z-scrim bg-backdrop fixed inset-0 min-h-screen touch-none opacity-60 transition-opacity;
    }

    .dialog__popup {
        @apply fixed top-1/2 left-1/2 box-border touch-none rounded shadow-lg transition-all duration-150;
        border-radius: var(--radius-rounded);
        background-color: var(--eds-color-bg-floating);
        outline: 1px solid var(--eds-color-border-neutral-subtle);
        transform: translate(-50%, -50%) scale(calc(1 - 0.1 * var(--nested-dialogs)));
        translate: 0 calc(0px + 1.25rem * var(--nested-dialogs));

        &[data-starting-style],
        &[data-ending-style] {
            opacity: 0;
            transform: translate(-50%, -50%) scale(0.9);
        }

        &[data-nested-dialog-open] {
            &::after {
                content: "";
                inset: 0;
                position: absolute;
                border-radius: inherit;
                background-color: rgb(0 0 0 / 0.05);
            }
        }
    }

    .dialog__popup__child {
        @apply px-horizontal-sm py-vertical-sm;
    }
}

